Correction des erreurs.